# ElysionEngine

./: .clang-format  .gitignore  .travis.yml  BUILD-WINDOWS-VS2017-X64.bat  BUILD-WINDOWS-VS2017-X86.bat  CMakeLists.txt  README.md  appveyor.yml
cmake/: HunterGate.cmake
src/: CMakeLists.txt  Component.cpp  Entity.cpp  EntityManager.cpp
src/include/: Color.hpp  Colour.hpp  Component.hpp  ECSDefines.hpp  Entity.hpp  EntityManager.hpp  Util.hpp
src/include/Maths/: Maths.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/include/ResourceManagement/: UniqueResource.hpp
unit_test/: CMakeLists.txt  ColourTests.cpp  EntityTests.cpp  ResourceTest.cpp
